[package]
name = "rustix-vcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.27.0", features = ["bundled"] }
base64 = "0.20.0-alpha.1"
